# BlkSpace

./: .gitignore  AGENTS.md  BlkSpoof_Codebase_Overview.md  DEVOPS.md  FLESHTHEORY.md  INSTALL.md  Makefile  Makefile 2  README.md  STARTUP.md  THEORY.md  TIER0_USER.md  blkspace-ui-system-plan.md  platform-comparison-analysis.md  setup.bat  setup.sh
.devcontainer/: devcontainer.json  post-create.sh  setup-solana.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
BlkSpace/: AGENTS.md  DEVOPS.md  FIRST_RUN.md  Grok-Computer Networking Top-Down Approach Overview.json  INSTALL.md  SOUL.md  STARTUP.md  plan.md
BlkSpace/docs/: ALIGNMENT_REVIEW.md  GROK_EXPORT_ANALYSIS.md  TOP_DOWN_APPROACH.md  bible-nlp-opt-in-draft.md  concepts-review.md  hub-theory.md  nostr-event-kinds.md  phase-0-status.md  reward-formulas.md  security-considerations.md  solana-security.md
BlkSpace/tools/: blkspace_progress.py
BlkSpace/weixinfo/: AI Impact on Jobs in China Analysis.md  Analyzing African American Literature Quiz.md  Apache Web Server Key Functionalities Explained.md  Array Passing in C++_ Address and Size.md  Array Size Declaration in C Programming.md  BLKSPACE Blueprint Analysis.md  Balancing Cultural Respect and Moral Principles.md  Best Tools for Pseudocode, CSV Analysis, and Visualization.md  Bible DJ Software Concept Design.md  Building Religious Text Analysis GUI Project.md  C++ Supports Multiple Programming Styles.md  Caravan Delay Calculation with Different Car Numbers.md  Celosia Greek Name Origin Explained.md  Client Sends Multiple Web Page Requests.md  Compute 16-bit Ones' Complement Checksum.md  Connect MacBook to Dell Monitor.md  Convert Tabular Data to Structured Sentences with PySpark.md  Converting XML to CSV in Python Methods.md  Correcting MySQL Code for Concatenation.md  Cotton Mather on Mental Illness and Witchcraft.md  Delia's Struggle Against Abusive Husband.md  DistillGPT2.0 for ML Text Analysis Pipelines.md  Easy LeetCode Problem_ Two Sum.md  Ethical Risks in Children's Facial Recognition Systems.md  Genesis Chapters 1-41 Summary Overview.md  LazyVim installation guide for MacBook.md  Linux Photo Editor SD Card.md  Man seeks clarity, distance after feelings shift..md  NFT DJ Mix Creation Guidance.md  NLP and Machine Learning_ Interconnected AI Fields.md  Odysee content creation legitimacy analysis.md  Online IDEs for R Project Overview.md  OpenClaw Homelab Optimization Guide.md  OpenClaw and DeepSeek OpenCode LazyVim Integration Guide.md  Opencode Neovim Mac Troubleshooting.md  PS4 1302 vue after free exploit explanation.md  (+27 more)
Code-Companion/: .replit  package.json  pnpm-lock 2.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
Code-Companion/artifacts/blkspace/src-tauri/: Cargo.toml  tauri.conf.json
Code-Companion/artifacts/blkspace/src-tauri/capabilities/: default.json
Code-Companion/artifacts/blkspace/src-tauri/src/: bksp_settlement.rs  bkspc_program.rs  bkspc_settlement.rs  blob_store.rs  db.rs  iroh_node.rs  key_store.rs  lib.rs  nft_mint.rs  relay_manager.rs  tests.rs  tests_iroh.rs  tests_nostr_relay.rs  tier0_benchmark.rs
Code-Companion/artifacts/solana/programs/bksp/: Cargo.toml
Code-Companion/artifacts/solana/programs/bksp/src/: lib.rs
Code-Companion/artifacts/solana/programs/bkspc/: Cargo.toml
Code-Companion/artifacts/solana/programs/bkspc/src/: lib.rs
docs/: BlkSpoof_Codebase_Overview.md  INDEX.md  README.md  REFERENCES.md  ROADMAP.md  TIER0_DEV.md  TOP_DOWN_APPROACH.md  YARD_RELEASE_CHECKLIST.md  amalgamation-feature-gap-and-mobile-roadmap.md  architecture-blueprint.md  beta-launch-research.md  beta-tokenomics-and-launch-strategy.md  bksp-devnet-runbook.md  bkspc-devnet-runbook.md  bkspc-pumpfun-launch.md  codebase-overview.md  device-b-m0-results.md  economy-student-terms.md  economy-uniform-model.md  federated-college-towns.md  future-social-features.md  gaming-portal-draft.md  hub-theory.md  ieee-review-brief.md  mvp-timeline-and-onchain-roadmap.md  onboarding-and-competitive-review.md  optimal-ui-exploration.md  phase-0-status.md  phase-4-devnet-demo.md  phase-4-devnet-e2e-proof.md  pitch-concerns-and-investor-use-cases.md  plan.md  platform-comparison-analysis.md  reward-formulas.md  solana-blueprint.md  solana-security.md  theory-pitch.md  tier0-freemium-wallet-gating-plan.md  tier0-load-optimization.md  tokenomics-kalshi-model.md  (+2 more)
tools/: blkspace_progress.py  owaybot.py
weixinfo/: Abstract Templates for AI Research Success.md  CSV Column Manipulation and Editing Methods.md  Concatenating First and Last Name Fields.md  Cross Platform LAN Play Not Possible.md  Datagram Networks Forward Packets by Destination.md  Enhancing Content Blocker Software Ethical Practices.md  Ethical Concerns in the Information Age.md  Ethical Leader in Global Engineering and AI.md  Extracting Substring with Regular Expression Pattern.md  Find Mac USB device name for ISO install.md  First Normal Form_ Single Scalar Value Requirement.md  Follow-Up on Class Override Process Clarification.md  Formatting Invoice Total with Dollar Sign.md  Full Stack vs Minimal Development Needs.md  GitHub Repositories for Documentation Examples.md  HTTP Browser Cache RTT Calculation Explained.md  HTTP Request Protocol Example and Explanations.md  How Dogs Began_ Evolutionary Domestication.md  Improving GPA and Career Goals for Scholarship.md  LazyVim Keyboard Shortcuts Cheat Sheet.md  Mac USB disk path confirmation.md  Memory Leak Prevention with delete Usage.md  Music Playlist Analysis.md  Natural Language Processing and Machine Learning Explained.md  PDF to CSV Python Script.md  Python Server for Multiple Client Connections.md  Query for Minimum CA Invoice Totals.md  Religions and the concept of the Most High.md  Revising Abstract for Clarity and Coherence.md  SQL Query for Product Rank by Total Quantity.md  SQL Query for Product Sales Ranking Analysis.md  TCP and UDP Server-Side Socket Actions.md  User seeks support for mental health struggles.md  Web Scraping Legal Issues and Alternatives.md  a) Define a function that fills .md
(+159 files in other folders)
