[package]
name = "app"
version = "0.1.0"
description = "BlkSpace — decentralized social platform"
authors = ["Eric Brown"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.81"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.34.0", features = ["bundled"] }
chrono = "0.4"
dirs = "6.0"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
secp256k1 = { version = "0.30", features = ["global-context"] }
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
nostr-sdk = { version = "0.38", features = [] }
url = "2"
async-trait = "0.1"
iroh-blobs = { version = "0.35", features = ["fs-store"] }
