[package]
name = "app"
version = "0.1.0"
description = "BlkSpace — decentralized social platform"
authors = ["Eric Brown"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.81"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.34.0", features = ["bundled"] }
chrono = "0.4"
dirs = "6.0"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
secp256k1 = { version = "0.30", features = ["global-context"] }
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
nostr-sdk = { version = "0.38", features = [] }
url = "2"
async-trait = "0.1"
iroh-blobs = { version = "0.35", features = ["fs-store"], optional = true }
# Pin socket2 to a version compatible with netwatch v0.5.0 (pulled by iroh-blobs 0.35) on macOS.
# This resolves the "Type::RAW" and UnixStream From<Socket> errors on BSD.
socket2 = { version = "0.5.7", features = ["all"] }
# Transitive re-exports from iroh-blobs for direct use in our IrohNode wrapper (no extra bloat).
bytes = "1"
iroh-io = "0.6"
keyring = "3"
chacha20poly1305 = "0.10"
rand = "0.8"
tauri-plugin-playwright = { version = "0.4.0", optional = true }
solana-client = { version = "2.2", optional = true }
solana-sdk = { version = "2.2", optional = true }
solana-transaction-status = { version = "2.2", optional = true }
spl-token = { version = "7.0", features = ["no-entrypoint"], optional = true }
spl-associated-token-account = { version = "6.0", features = ["no-entrypoint"], optional = true }
bincode = { version = "1.3", optional = true }

[features]
default = ["iroh"]
iroh = ["dep:iroh-blobs"]
bkspc-devnet = [
  "dep:solana-client",
  "dep:solana-sdk",
  "dep:solana-transaction-status",
  "dep:spl-token",
  "dep:spl-associated-token-account",
  "dep:bincode",
]
e2e-testing = ["dep:tauri-plugin-playwright"]

# Iroh is enabled by default for dev and release builds (`pnpm tauri:dev` / `pnpm tauri:build`).
# CI also runs a dedicated Linux smoke job with explicit `--features iroh`.
# Disable with `cargo build --no-default-features` if you need a slim binary without blob networking.
# The build is feature-gated by default because iroh-blobs 0.35 transitives (netwatch) can have
# platform issues on macOS even with the socket2=0.5.7 pin. When enabled:
# - upload_blob stores to Iroh fs store and returns real CID (blake3) in BlobInfo.cid
# - blobs table stores both local sha hash (for fs fallback) + cid
# - get_blob_bytes prefers cid for Iroh fetch when present (unblocks media CIDs, future p2p/pinning rewards)
# Default (no feature) still provides cid=hash fallback so UI/media never breaks.

[dev-dependencies]
tempfile = "3"
