[package]
name = "bksp"
version = "0.1.0"
description = "BLKSPACE COIN (BKSP) — settlement registry token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bksp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"